# haskellseminar

./: LICENSE  README.md  seminar.cabal
src/: add_with_curry.hs  add_without_curry.hs  comprehensions.hs  expressions.hs  filter.hs  function_with_guards.hs  function_with_pattern.hs  function_with_recursion.hs  functions.hs  guards.hs  lazy.hs  lists.hs  map.hs  reduce.hs  tuples.hs
