name:                seminar
version:             0.1.0.0
synopsis:            Seminar on Haskell
description:         Please see README.md
homepage:            https://github.com/faizaanceg/seminar#readme
license:             BSD
license-file:        LICENSE
author:              N.Md Faizaan
maintainer:          aulisius7@gmail.com
copyright:           2016 N.Md Faizaan
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable seminar-exe
  hs-source-dirs:      src
  main-is:             lists.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , seminar
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/faizaanceg/haskellseminar
